--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,16 @@
 <!-- app/views/tasks/index.html.erb -->
-<h1>Hello, Tasks!</h1>
-<%= link_to 'Sign up', new_user_registration_path %>
+<h1>自己診断</h1>
 
+
+
+<ul>
+  <% if user_signed_in? %>
+    <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
+  <% else %>
+    <li><%= link_to 'Sign up', new_user_registration_path %></li>
+    <li><%= link_to 'Log in', new_user_session_path %></li>
+  <% end %>
+</ul>
 
 
 <%= form_with(model: @new_task, url: tasks_path, method: "post") do |form| %>
