--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -21,6 +21,8 @@
   <%= form.datetime_local_field :start_time, value: current_time, placeholder: "開始日時を入力してください" %>
   <% current_time = Time.now.strftime("%Y-%m-%dT%H:%M") %>
   <%= form.datetime_local_field :end_time, value: current_time, placeholder: "終了日時を入力してください" %>
+  <%= form.hidden_field :user_id, value: current_user.id %>
+
   <%= form.submit "追加する" %>
 <% end %>
 
@@ -42,4 +44,3 @@
     <li>作業時間 <%= format_duration(work_duration) %></li>
   <% end %>
 </ul>
-
