--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -54,6 +54,6 @@
       <li><%= "#{title}: #{format_duration(total_duration)}" %></li>
     <% end %>
   <% else %>
-    <li>No tasks available</li>
+    <li>作業をして下さい</li>
   <% end %>
 </ul>
