--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,8 +5,10 @@
 
 <ul>
   <% if user_signed_in? %>
-    <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
-    <li>ようこそ、<%= current_user.name %>さん</li>
+    <%= link_to 'Log out', destroy_user_session_path, method: :delete %>
+    <% @users.each do |user| %>
+      <li>ようこそ、<%= link_to user.name, user_path(user) %>さん</li>
+    <% end %>
   <% else %>
     <li><%= link_to '新規登録', new_user_registration_path %></li>
     <li><%= link_to 'ログイン', new_user_session_path %></li>
