--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -11,7 +11,15 @@
     <li><%= link_to 'ログイン', new_user_session_path %></li>
   <% end %>
 </ul>
+
+
 <li><%= link_to '編集', edit_user_registration_path %></li>
+<li>
+  <% @tasks.each do |task| %>
+    <%= link_to "Show Task", task_path(task), class: "btn btn-primary" %>
+  <% end %>
+</li>
+
 
 
 
