--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -13,13 +13,17 @@
 </ul>
 
 
-
+<li><%= link_to '新規登録', edit_user_registration_path %></li>
   <% @tasks.each do |task| %>
     <li><%= link_to "Show Task", task_path(task), class: "btn btn-primary" %></li>
   <% end %>
 
 
-
+<ul>
+  <% @users.each do |user| %>
+    <li><%= link_to user.name, user_path(user) %></li>
+  <% end %>
+</ul>
 
 
 
