--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -18,6 +18,10 @@
     <li><%= link_to "Show Task", task_path(task), class: "btn btn-primary" %></li>
   <% end %>
 
+  <% if user_signed_in? %>
+    <li><%= link_to 'ユーザー詳細', user_path(current_user) %></li>
+  <% end %>
+
 
 
 
