タスクの詳細を表示しメインの文字量を減らした

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -48,12 +48,20 @@
   <% end %>
 </ul>
 
+
+
+<ul>
   <% @tasks.each do |task| %>
-    <li><%= link_to "Show Task", task_path(task), class: "btn btn-primary" %></li>
+    <li>
+      <%= link_to "#{task.title} (#{format_duration(task.duration)})", task_path(task), class: "btn btn-primary" %>
+    </li>
   <% end %>
+</ul>
 
 
 
+
+<!-- 全体表示
 <ul>
   <% current_user.tasks.each do |task| %>
     <li>タイトル <%= task.title %></li>
@@ -66,4 +74,4 @@
     <li>作業時間 <%= format_duration(work_duration) %></li>
   <% end %>
 </ul>
-
+-->
