--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,3 +1,4 @@
+<!-- タスクの詳細 -->
 <h1><%= @task.title %></h1>
 <p>Description: <%= @task.description %></p>
 <p>Start Time: <%= @task.start_time %></p>
