--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,6 +1,6 @@
 <!-- app/views/tasks/edit.html.erb -->
 
-<h1>Edit Task</h1>
+<h1>編集</h1>
 
 <%= form_with(model: @task, url: task_path(@task), method: :patch) do |form| %>
   <% if @task.errors.any? %>
@@ -16,28 +16,28 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :title %><br>
+    タイトル
     <%= form.text_field :title %>
   </div>
 
   <div class="field">
-    <%= form.label :description %><br>
+    内容
     <%= form.text_area :description %>
   </div>
 
   <div class="field">
-    <%= form.label :start_time %><br>
+   開始時間
     <%= form.datetime_local_field :start_time %>
   </div>
 
   <div class="field">
-    <%= form.label :end_time %><br>
+    終了時間
     <%= form.datetime_local_field :end_time %>
   </div>
 
   <div class="actions">
-    <%= form.submit "Update Task" %>
+    <%= form.submit "更新する" %>
   </div>
 <% end %>
 
-<%= link_to 'Back', tasks_path %>
+<%= link_to '戻る', tasks_path %>
