Rails 7のエラー記入と表示変更

--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -16,12 +16,12 @@
   <% end %>
 
   <div class="field">
-    タイトル
+    作業名
     <%= form.text_field :title %>
   </div>
 
   <div class="field">
-    内容
+    作業内容
     <%= form.text_area :description %>
   </div>
 
