--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -6,6 +6,7 @@
 <p>作業時間: <%= format_duration(@task.duration) %></p>
 <p>作業内容: <%= @task.description %></p>
 <%= link_to '編集', edit_task_path(@task) %>
+<!-- Rails7から記入が必要（turbo_method: :delete,） -->
 <%= link_to '削除', @task, method: :delete, data: { turbo_method: :delete,confirm: '本当に削除しますか？' } %>
 
 <%= link_to 'TOPに戻る', tasks_path %>
