登録きないがユーザー情報を表示

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,3 +7,8 @@
 
 
 <%= link_to '戻る', tasks_path %>
+<!-- app/views/user_profiles/edit.html.erb -->
+<%= link_to 'Edit Profile', new_user_profiles_path, class: 'btn btn-primary' %>
+
+
+
