--- a/app/views/user_profiles/new.html.erb
+++ b/app/views/user_profiles/new.html.erb
@@ -1,12 +1,15 @@
-<h1>New Profile</h1>
 
-<%= form_for @user_profile, url: user_profiles_path, method: :post, html: { multipart: true } do |f| %>
-  <div>
-    <%= f.label :address %>
-    <%= f.text_field :address %>
-  </div>
 
-  <div>
+
+コードをコピーする
+<% if @user_profile %>
+  <%= form_for @user_profile, url: user_profiles_path, method: :post, html: { multipart: true } do |f| %>
+    <div>
+      <%= f.label :address %>
+      <%= f.text_field :address %>
+    </div>
+
+    <div>
     <%= f.label :city %>
     <%= f.text_field :city %>
   </div>
@@ -35,10 +38,9 @@
     <%= f.label :gender %>
     <%= f.text_field :gender %>
   </div>
-
-  <div>
-    <%= f.submit 'Create Profile' %>
-  </div>
+    <!-- Additional form fields... -->
+    <%= f.submit "Create Profile" %>
+  <% end %>
+<% else %>
+  <p>Unable to create a new profile at the moment.</p>
 <% end %>
-
-<%= link_to 'Back', tasks_path %>
