--- a/app/views/user_profiles/new.html.erb
+++ b/app/views/user_profiles/new.html.erb
@@ -1,46 +1,30 @@
 
 
 
-コードをコピーする
+ユーザー詳細画面
 <% if @user_profile %>
   <%= form_for @user_profile, url: user_profiles_path, method: :post, html: { multipart: true } do |f| %>
     <div>
-      <%= f.label :address %>
-      <%= f.text_field :address %>
+      住所<%= f.text_field :address %>
     </div>
 
-    <div>
-    <%= f.label :city %>
-    <%= f.text_field :city %>
+  <div>
+    郵便番号<%= f.text_field :postal_code %>
   </div>
 
   <div>
-    <%= f.label :country %>
-    <%= f.text_field :country %>
+    電話番号<%= f.text_field :phone_number %>
   </div>
 
   <div>
-    <%= f.label :postal_code %>
-    <%= f.text_field :postal_code %>
+    性別<%= f.text_field :gender %>
   </div>
 
   <div>
-    <%= f.label :phone_number %>
-    <%= f.text_field :phone_number %>
+    プロフィール画像<%= f.file_field :avatar %>
   </div>
 
-  <div>
-    <%= f.label :avatar %>
-    <%= f.file_field :avatar %>
-  </div>
-
-  <div>
-    <%= f.label :gender %>
-    <%= f.text_field :gender %>
-  </div>
     <!-- Additional form fields... -->
     <%= f.submit "Create Profile" %>
   <% end %>
-<% else %>
-  <p>Unable to create a new profile at the moment.</p>
 <% end %>
