--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,8 @@
 
 <p><strong>メールアドレス:</strong> <%= current_user.email %>　　<%= link_to 'ユーザー名、メールアドレスの編集', edit_user_registration_path %>
 
+<br>
+
 
 
 <% if @user_profile %>
@@ -36,13 +38,22 @@
   <% if @user_profile.avatar.present? %>
     <p> <%= @user_profile.avatar %></p>
   <% else %>
-  <p>No user profile available.</p>
+  <p>プロフィール画像:空なので登録して下さい</p>
   <% end %>-->
+  
+  <% else %>
+  <p><strong>住所: 空なので登録して下さい</strong></p>
+  <p><strong>郵便番号: 空なので登録して下さい</strong></p>
+  <p><strong>電話番号: 空なので登録して下さい</strong></p>
+  <p><strong>性別: 空なので登録して下さい</strong></p>
+  <!--<p><strong>プロフィール画像:空なので登録して下さい</strong></p>-->
+  <!--<%= link_to '情報を登録する', new_user_profiles_path, class: 'btn btn-primary' %>-->
 
 <% end %>
 
-<%= link_to '戻る', tasks_path %>
 <%= link_to '情報を登録する', new_user_profiles_path, class: 'btn btn-primary' %>
+<%= link_to '編集', new_user_profiles_path, class: 'btn btn-primary' %>
+<%= link_to '戻る', tasks_path %>
 
 
 
