--- a/app/views/user_profiles/edit.html.erb
+++ b/app/views/user_profiles/edit.html.erb
@@ -1,8 +1,9 @@
 <!-- app/views/user_profiles/edit.html.erb -->
 
 <h1>Edit User Profile</h1>
+<%= form_for @user_profile do |f| %>
 
-<%= form_for @user_profile, url: user_profile_path(@user_profile), method: :patch, html: { multipart: true } do |f| %>
+
   <div>
     <%= f.label :address %>
     <%= f.text_field :address %>
