--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -40,7 +40,7 @@
   <% else %>
   <p>プロフィール画像:空なので登録して下さい</p>
   <% end %>-->
-  <%= link_to 'Edit Profile', edit_user_profile_path(@user_profile) %>
+  
   <% else %>
   <p><strong>住所: 空なので登録して下さい</strong></p>
   <p><strong>郵便番号: 空なので登録して下さい</strong></p>
@@ -52,8 +52,7 @@
 <% end %>
 
 <%= link_to '情報を登録する', new_user_profiles_path, class: 'btn btn-primary' %>
-
-
+<%= link_to '編集', new_user_profiles_path, class: 'btn btn-primary' %>
 <%= link_to '戻る', tasks_path %>
 
 
