保存するとからになり入力画面に進まない

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -47,13 +47,12 @@
   <p><strong>電話番号: 空なので登録して下さい</strong></p>
   <p><strong>性別: 空なので登録して下さい</strong></p>
   <!--<p><strong>プロフィール画像:空なので登録して下さい</strong></p>-->
-  <!--<%= link_to '情報を登録する', new_user_profiles_path, class: 'btn btn-primary' %>-->
+  <%= link_to '情報を登録する', new_user_user_profile_path(@user), class: 'btn btn-primary' %>
 
 <% end %>
 
-<%= link_to '情報を登録する', new_user_profiles_path, class: 'btn btn-primary' %>
-<%= link_to '編集', new_user_profiles_path, class: 'btn btn-primary' %>
-<%= link_to '戻る', tasks_path %>
 
+<%= link_to '編集', edit_user_user_profile_path(@user, @user_profile), class: 'btn btn-primary' %>
+<%= link_to '戻る', tasks_path %>
 
 
