--- a/app/views/user_profiles/edit.html.erb
+++ b/app/views/user_profiles/edit.html.erb
@@ -1,21 +1,25 @@
-<!-- app/views/user_profiles/edit.html.erb -->
-
-<h1>Edit User Profile</h1>
-
-<%= form_for @user_profile, url: user_profile_path(@user_profile), method: :patch, html: { multipart: true } do |f| %>
+<%= form_for [@user, UserProfile.new], url: user_user_profiles_path(@user), method: :post, html: { multipart: true } do |f| %>
+  <!-- 各入力フィールドの例 -->
   <div>
-    <%= f.label :address %>
-    <%= f.text_field :address %>
+    住所<%= f.text_field :address %>
   </div>
 
   <div>
-    <%= f.label :city %>
-    <%= f.text_field :city %>
+    郵便番号<%= f.text_field :postal_code %>
   </div>
 
-  <!-- Add other user profile attributes with similar fields -->
+  <div>
+    電話番号<%= f.text_field :phone_number %>
+  </div>
 
-  <%= f.submit "Update Profile" %>
+  <div>
+    性別<%= f.text_field :gender %>
+  </div>
+
+  <div>
+    プロフィール画像<%= f.file_field :avatar %>
+  </div>
+
+  <!-- Additional form fields... -->
+  <%= f.submit "Create Profile" %>
 <% end %>
-
-<%= link_to 'Back to Profile', user_profile_path(@user_profile) %>
