--- a/app/views/user_profiles/new.html.erb
+++ b/app/views/user_profiles/new.html.erb
@@ -1,12 +1,8 @@
-
-
-
-ユーザー詳細画面
-<% if @user_profile %>
-  <%= form_for @user_profile, url: user_profiles_path, method: :post, html: { multipart: true } do |f| %>
-    <div>
-      住所<%= f.text_field :address %>
-    </div>
+<%= form_for [@user, @user_profile], url: user_user_profile_path(@user), method: :patch, html: { multipart: true } do |f| %>
+  <!-- 各入力フィールドの例 -->
+  <div>
+    住所<%= f.text_field :address %>
+  </div>
 
   <div>
     郵便番号<%= f.text_field :postal_code %>
@@ -24,7 +20,6 @@
     プロフィール画像<%= f.file_field :avatar %>
   </div>
 
-    <!-- Additional form fields... -->
-    <%= f.submit "Create Profile" %>
-  <% end %>
+  <!-- Additional form fields... -->
+  <%= f.submit "Create Profile" %>
 <% end %>
